--- a/_includes/dashboard.html
+++ b/_includes/dashboard.html
@@ -11,7 +11,7 @@
 {% include build_status_table.html %}
 
 <div class="alert alert-info">
-  <h4>Pull Requests</h4>
+  <h4>External Pull Requests</h4>
 </div>
 
 {% assign table_type = "pull_request" %}
