--- a/_includes/common.html
+++ b/_includes/common.html
@@ -11,6 +11,8 @@
 
 <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
 
+<link rel="stylesheet" href="/octicons/octicons.css">
+
 <script src="//mbostock.github.com/d3/d3.v2.js"></script>
 <style>
 /* tell the SVG path to be a thin blue line without any area fill */
