Correct links from detail results pages

--- a/_layouts/ci_results.html
+++ b/_layouts/ci_results.html
@@ -6,6 +6,8 @@
 
 <head>
 {% include common.html %}
+{% assign base_repository = page.repository %}
+{% include common_variables.html %}
 
 </head>
 
