Add download and timing info for packages
Also update to font awesome 4.1.0

--- a/_includes/common_variables.html
+++ b/_includes/common_variables.html
@@ -3,5 +3,4 @@
 {% assign base_release_url = "https://github.com/" | append: base_repository | append: "/releases/tag" %}
 {% assign base_commit_url = "https://github.com/" | append: base_repository | append: "/commit" %}
 {% assign base_compare_url = "https://github.com/" | append: base_repository | append: "/compare" %}
-
-
+{% assign base_delete_url = "https://github.com/" | append: base_repository | append: "/delete/gh-pages/_posts" %}
