--- a/_includes/build_status_table.html
+++ b/_includes/build_status_table.html
@@ -343,10 +343,16 @@ if ("{{table_type}}" != "release") {
 
             {% if analysis_only == false and num_table_cols > 2 %}
               {% if post.pending %}<td class="warning"><h6>Pending</h6>
-              {% elsif post.release_packaged == false or post.package_error_count > 0 %}<td class="danger"><h6><a href="{{package_url}}">Errors / Warnings<span class="badge pull-right">{{post.package_error_count}} / {{post.package_warning_count}}</a></h6>
-              {% elsif post.package_warning_count > 0 %}<td class="warning"><h6><a href="{{package_url}}">Warnings<span class="badge pull-right">{{post.package_error_count}} / {{post.package_warning_count}}</a></h6>
-              {% else %}<td class="success"><h6><a href="{{package_url}}">Succeeded<span class="badge pull-right">{{post.package_error_count}} / {{post.package_warning_count}}</a></h6>
+              {% elsif post.release_packaged == false or post.package_error_count > 0 %}<td class="danger"><h6><a href="{{package_url}}">Errors / Warnings<span class="badge pull-right">{{post.package_error_count}} / {{post.package_warning_count}}</a>
+              {% elsif post.package_warning_count > 0 %}<td class="warning"><h6><a href="{{package_url}}">Warnings<span class="badge pull-right">{{post.package_error_count}} / {{post.package_warning_count}}</a>
+              {% else %}<td class="success"><h6><a href="{{package_url}}">Succeeded<span class="badge pull-right">{{post.package_error_count}} / {{post.package_warning_count}}</a>
               {% endif %}
+              <small>{% if post.pending == false and post.test_time %}{{ post.test_time }}s{% endif %}</small></h6>
+
+              {% if post.release_packaged == true %}
+              <a href="{{ base_url }}/{{ key }}"><i class="fa fa-cloud-download"></i></a>
+              {% endif %}
+
               </td>
  
             {% endif %}
