--- a/_includes/common.html
+++ b/_includes/common.html
@@ -13,7 +13,7 @@
 
 <link rel="stylesheet" href="octicons/octicons.css">
 
-<script src="//mbostock.github.com/d3/d3.v2.js"></script>
+<script src="//d3js.org/d3.v2.js"></script>
 <style>
 /* tell the SVG path to be a thin blue line without any area fill */
 path {
