--- a/_includes/header.html
+++ b/_includes/header.html
@@ -18,20 +18,20 @@ the "minus: 0" is used to convert the date string into an integer for the > comp
   {% assign post_date = p.date | date: "%s" | minus: 0 %}
   {% if p.tag_name and post_date > min_date %}
 
-    {% assign tag_names = tag_names_list | split: ',' | sort %}
+    {% assign tag_names = tag_names_list | split: ',;,' | sort %}
 
     {% if tag_names contains p.tag_name %}
     {% else %}
       {% if tag_names_list == "" %}
         {% assign tag_names_list = p.tag_name %}
       {% else %}
-        {% capture tag_names_list %}{{tag_names_list}},{{p.tag_name}}{% endcapture %}
+        {% capture tag_names_list %}{{tag_names_list}},;,{{p.tag_name}}{% endcapture %}
       {% endif %}
     {% endif %}
   {% endif %}
 {% endfor %}
 
-{% assign tag_names = tag_names_list | split: ',' | sort %}
+{% assign tag_names = tag_names_list | split: ',;,' | sort %}
 
 
 {% assign has_master = false %}
@@ -46,28 +46,28 @@ the "minus: 0" is used to convert the date string into an integer for the > comp
     {% elsif p.branch_name == "develop" %}
       {% assign has_develop = true %}
     {% else %}
-      {% assign branch_names = branch_names_list | split: ',' | sort %}
+      {% assign branch_names = branch_names_list | split: ',;,' | sort %}
       {% if branch_names contains p.branch_name %}
       {% else %}
         {% if branch_names_list == "" %}
           {% assign branch_names_list = p.branch_name %}
         {% else %}
-          {% capture branch_names_list %}{{branch_names_list}},{{p.branch_name}}{% endcapture %}
+          {% capture branch_names_list %}{{branch_names_list}},;,{{p.branch_name}}{% endcapture %}
         {% endif %}
       {% endif %}
     {% endif %}
   {% endif %}
 {% endfor %}
 
-{% assign branch_names = branch_names_list | split: ',' | sort %}
+{% assign branch_names = branch_names_list | split: ',;,' | sort %}
 
-{% assign branch_names_list = branch_names | join: ',' %}
+{% assign branch_names_list = branch_names | join: ',;,' %}
 
 {% if has_develop %}
   {% if branch_names_list == "" %}
     {% assign branch_names_list = "develop" %}
   {% else %}
-    {% capture branch_names_list %}develop,{{branch_names_list}}{% endcapture %}
+    {% capture branch_names_list %}develop,;,{{branch_names_list}}{% endcapture %}
   {% endif %}
 {% endif %}
 
@@ -75,49 +75,49 @@ the "minus: 0" is used to convert the date string into an integer for the > comp
   {% if branch_names_list == "" %}
     {% assign branch_names_list = "master" %}
   {% else %}
-    {% capture branch_names_list %}master,{{branch_names_list}}{% endcapture %}
+    {% capture branch_names_list %}master,;,{{branch_names_list}}{% endcapture %}
   {% endif %}
 {% endif %}
 
-{% assign branch_names = branch_names_list | split: ',' %}
+{% assign branch_names = branch_names_list | split: ',;,' %}
 
 {% assign pull_request_issue_ids_list = "" %}
 {% for p in results_posts %}
   {% assign post_date = p.date | date: "%s" | minus: 0%}
   {% if p.pull_request_issue_id and p.pull_request_issue_id != "" and post_date > min_date %}
-    {% assign pull_request_issue_ids = pull_request_issue_ids_list | split: ',' | sort %}
+    {% assign pull_request_issue_ids = pull_request_issue_ids_list | split: ',;,' | sort %}
 
     {% if pull_request_issue_ids contains p.pull_request_issue_id %}
     {% else %}
       {% if pull_request_issue_ids_list == "" %}
         {% assign pull_request_issue_ids_list = p.pull_request_issue_id %}
       {% else %}
-        {% capture pull_request_issue_ids_list %}{{pull_request_issue_ids_list}},{{p.pull_request_issue_id}}{% endcapture %}
+        {% capture pull_request_issue_ids_list %}{{pull_request_issue_ids_list}},;,{{p.pull_request_issue_id}}{% endcapture %}
       {% endif %}
     {% endif %}
   {% endif %}
 {% endfor %}
 
-{% assign pull_request_issue_ids = pull_request_issue_ids_list | split: ',' | sort %}
+{% assign pull_request_issue_ids = pull_request_issue_ids_list | split: ',;,' | sort %}
 
 
 {% assign device_ids_list = "" %}
 {% for p in results_posts %}
   {% assign post_date = p.date | date: "%s" | minus: 0 %}
   {% if p.device_id and post_date > min_date %}
-    {% assign device_ids = device_ids_list | split: ',' | sort %}
+    {% assign device_ids = device_ids_list | split: ',;,' | sort %}
     {% if device_ids contains p.device_id %}
     {% else %}
       {% if device_ids_list == "" %}
         {% capture device_ids_list %}{{p.device_id}}{% endcapture %}
       {% else %}
-        {% capture device_ids_list %}{{device_ids_list}},{{p.device_id}}{% endcapture %}
+        {% capture device_ids_list %}{{device_ids_list}},;,{{p.device_id}}{% endcapture %}
       {% endif %}
     {% endif %}
   {% endif %}
 {% endfor %}
 
-{% assign device_ids = device_ids_list | split: ',' | sort %}
+{% assign device_ids = device_ids_list | split: ',;,' | sort %}
 
 {% assign analysis_list = "" %}
 {% for d in device_ids %}
@@ -132,9 +132,9 @@ the "minus: 0" is used to convert the date string into an integer for the > comp
   {% if analysis_list == "" %}
     {% capture analysis_list %}{{is_analysis}}{% endcapture %}
   {% else %}
-    {% capture analysis_list %}{{analysis_list}},{{is_analysis}}{% endcapture %}
+    {% capture analysis_list %}{{analysis_list}},;,{{is_analysis}}{% endcapture %}
   {% endif %}
 {% endfor %}
 
-{% assign analysis_array = analysis_list | split: ',' %}
+{% assign analysis_array = analysis_list | split: ',;,' %}
 
