--- a/_includes/build_status_table.html
+++ b/_includes/build_status_table.html
@@ -343,7 +343,10 @@ if ("{{table_type}}" != "release") {
 
             {% if analysis_only == false and num_table_cols > 2 %}
               {% if post.pending %}<td class="warning"><h6>Pending</h6>
-              {% elsif post.release_packaged == false or post.package_error_count > 0 %}<td class="danger"><h6><a href="{{package_url}}">Errors / Warnings<span class="badge pull-right">{{post.package_error_count}} / {{post.package_warning_count}}</a>
+              {% elsif post.packaging_skipped == true %}
+              <td class="success"><h6>Packaging Skipped</h6>
+              {% elsif post.release_packaged == false or post.package_error_count > 0 %}
+              <td class="danger"><h6><a href="{{package_url}}">Errors / Warnings<span class="badge pull-right">{{post.package_error_count}} / {{post.package_warning_count}}</a>
               {% elsif post.package_warning_count > 0 %}<td class="warning"><h6><a href="{{package_url}}">Warnings<span class="badge pull-right">{{post.package_error_count}} / {{post.package_warning_count}}</a>
               {% else %}<td class="success"><h6><a href="{{package_url}}">Succeeded<span class="badge pull-right">{{post.package_error_count}} / {{post.package_warning_count}}</a>
               {% endif %}
