--- a/_layouts/ci_results.html
+++ b/_layouts/ci_results.html
@@ -2,14 +2,15 @@
 ---
 
 <!DOCTYPE HTML>
-<meta http-equiv='Content-Type' content='text/html; charset=utf-8' />
-
 <head>
+<title>{{ page.title }}</title>
+<meta http-equiv='Content-Type' content='text/html; charset=utf-8' />
+<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+<meta name="viewport" content="width=device-width, initial-scale=1">
 {% include common.html %}
 {% assign base_repository = page.repository %}
 {% assign results_repository = page.results_repository %}
 {% include common_variables.html %}
-<title>{{ page.title }}</title>
 </head>
 
 
