--- a/_includes/common.html
+++ b/_includes/common.html
@@ -1,3 +1,9 @@
+<title>{{ page.title }}</title>
+<meta http-equiv='Content-Type' content='text/html; charset=utf-8' />
+<meta charset="UTF-8"/>
+<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+<meta name="viewport" content="width=device-width, initial-scale=1">
+
 <!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
 
